welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: value Max is not a member of object Math
			return Math.Max(a, b);
                                    ^max1020:9: error: type mismatch;
 found   : Unit
 required: Int
	else if (b<=20 && b>=10) {
             ^